# lorem-ipsum

./: CMakeLists.txt  send-to-meli.sh  sh-reader-writer.config  sh-reader.sh  sh-writer.sh
